added gltf loader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,10 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 add_executable(Playing_with_OpenGL ${SOURCES}
         external/stb/stb_implementation.cpp)
 
-# ---------- GLM & STB ---------- #
+# ---------- GLM ---------- #
 include_directories(external/glm)
-target_include_directories(Playing_with_OpenGL PRIVATE external)
 
+target_include_directories(Playing_with_OpenGL PRIVATE external)
 
 find_package(OpenGL REQUIRED)
 target_link_libraries(Playing_with_OpenGL PRIVATE
